crates/parser/tests/parser/snapshots/main__parser__fixtures__basic_pattern_match.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: match_wildcard
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 32
            - 33
      constraints: []
      return_type: ~
      body:
        Match:
          scrutinee:
            Var:
              name: x
              span:
                - 43
                - 44
          arms:
            - pattern:
                Wildcard:
                  span:
                    - 51
                    - 52
              guard: ~
              body:
                Lit:
                  value:
                    Int: 0
                  span:
                    - 56
                    - 57
              span:
                - 51
                - 57
          span:
            - 37
            - 60
      span:
        - 13
        - 60
  - DefFn:
      platform: ~
      name: match_literal
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 80
            - 81
      constraints: []
      return_type: ~
      body:
        Match:
          scrutinee:
            Var:
              name: x
              span:
                - 91
                - 92
          arms:
            - pattern:
                Lit:
                  value:
                    Int: 1
                  span:
                    - 99
                    - 100
              guard: ~
              body:
                Lit:
                  value:
                    String: one
                  span:
                    - 104
                    - 109
              span:
                - 99
                - 109
            - pattern:
                Lit:
                  value:
                    Int: 2
                  span:
                    - 115
                    - 116
              guard: ~
              body:
                Lit:
                  value:
                    String: two
                  span:
                    - 120
                    - 125
              span:
                - 115
                - 125
            - pattern:
                Wildcard:
                  span:
                    - 131
                    - 132
              guard: ~
              body:
                Lit:
                  value:
                    String: other
                  span:
                    - 136
                    - 143
              span:
                - 131
                - 143
          span:
            - 85
            - 146
      span:
        - 62
        - 146
  - DefFn:
      platform: ~
      name: match_constructor
      visibility: Private
      type_params: []
      params:
        - name: opt
          ty: ~
          mode: Consume
          span:
            - 170
            - 173
      constraints: []
      return_type: ~
      body:
        Match:
          scrutinee:
            Var:
              name: opt
              span:
                - 183
                - 186
          arms:
            - pattern:
                Constructor:
                  name: None
                  args: []
                  span:
                    - 193
                    - 197
              guard: ~
              body:
                Lit:
                  value:
                    Int: 0
                  span:
                    - 201
                    - 202
              span:
                - 193
                - 202
            - pattern:
                Constructor:
                  name: Some
                  args:
                    - Var:
                        name: x
                        span:
                          - 213
                          - 214
                  span:
                    - 208
                    - 215
              guard: ~
              body:
                Var:
                  name: x
                  span:
                    - 219
                    - 220
              span:
                - 208
                - 220
          span:
            - 177
            - 223
      span:
        - 148
        - 223
  - DefFn:
      platform: ~
      name: match_tuple
      visibility: Private
      type_params: []
      params:
        - name: pair
          ty: ~
          mode: Consume
          span:
            - 241
            - 245
      constraints: []
      return_type: ~
      body:
        Match:
          scrutinee:
            Var:
              name: pair
              span:
                - 255
                - 259
          arms:
            - pattern:
                Tuple:
                  elements:
                    - Var:
                        name: a
                        span:
                          - 267
                          - 268
                    - Var:
                        name: b
                        span:
                          - 270
                          - 271
                  span:
                    - 266
                    - 272
              guard: ~
              body:
                BinaryOp:
                  op: Add
                  lhs:
                    Var:
                      name: a
                      span:
                        - 276
                        - 277
                  rhs:
                    Var:
                      name: b
                      span:
                        - 280
                        - 281
                  span:
                    - 276
                    - 281
              span:
                - 266
                - 281
          span:
            - 249
            - 284
      span:
        - 225
        - 284
