crates/parser/tests/parser/snapshots/main__parser__fixtures__basic_type_record.snap
---
source: crates/parser/tests/fixture_test.rs
assertion_line: 28
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Point
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 31
                    - 34
            - - y
              - Named:
                  name: Int
                  span:
                    - 39
                    - 42
      deriving: []
      span:
        - 13
        - 44
  - DefType:
      platform: ~
      name: Person
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - name
              - Named:
                  name: String
                  span:
                    - 68
                    - 74
            - - age
              - Named:
                  name: Int
                  span:
                    - 81
                    - 84
      deriving:
        - Eq
        - Show
      span:
        - 46
        - 106
  - DefFn:
      platform: ~
      name: get_x
      visibility: Private
      type_params: []
      params:
        - name: p
          ty: ~
          span:
            - 118
            - 119
      constraints: []
      return_type: ~
      body:
        FieldAccess:
          expr:
            Var:
              name: p
              span:
                - 123
                - 124
          field: x
          span:
            - 123
            - 126
      span:
        - 108
        - 126
