crates/parser/tests/parser/snapshots/main__parser__fixtures__doc_basic.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: add
      visibility: Private
      type_params: []
      params:
        - name: a
          ty:
            Named:
              name: Int
              span:
                - 43
                - 46
          mode: Consume
          span:
            - 40
            - 46
        - name: b
          ty:
            Named:
              name: Int
              span:
                - 51
                - 54
          mode: Consume
          span:
            - 48
            - 54
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 59
            - 62
      body:
        BinaryOp:
          op: Add
          lhs:
            Var:
              name: a
              span:
                - 65
                - 66
          rhs:
            Var:
              name: b
              span:
                - 69
                - 70
          span:
            - 65
            - 70
      doc: add two numbers
      span:
        - 13
        - 70
