crates/parser/tests/parser/snapshots/main__parser__fixtures__doc_orphan_dropped.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: noop
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 114
            - 117
      body:
        Lit:
          value:
            Int: 0
          span:
            - 120
            - 121
      doc: ~
      span:
        - 13
        - 121
