crates/parser/tests/parser/snapshots/main__parser__fixtures__empty_sum.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Never
      visibility: Private
      type_params: []
      kind:
        Sum:
          variants: []
      deriving: []
      span:
        - 13
        - 29
  - DefType:
      platform: ~
      name: NoMessages
      visibility: Private
      type_params: []
      kind:
        Sum:
          variants: []
      deriving: []
      span:
        - 29
        - 49
