crates/parser/tests/parser/snapshots/main__parser__fixtures__field_access.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Point
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 31
                    - 34
            - - y
              - Named:
                  name: Int
                  span:
                    - 39
                    - 42
      deriving: []
      doc: ~
      span:
        - 13
        - 44
  - DefFn:
      platform: ~
      name: get_x
      visibility: Private
      type_params: []
      params:
        - name: p
          ty:
            Named:
              name: Point
              span:
                - 58
                - 63
          mode: Consume
          span:
            - 55
            - 63
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 68
            - 71
      body:
        FieldAccess:
          expr:
            Var:
              name: p
              span:
                - 74
                - 75
          field: x
          span:
            - 74
            - 77
      doc: ~
      span:
        - 45
        - 77
